# app/Http/Controllers/API/ReportController.php
@@ -4,11 +4,59 @@ namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
 use App\Http\Controllers\ResponseController;
+use App\Models\Report;
 use App\Models\ReportSection;
 use Illuminate\Http\Request;
 
 class ReportController extends Controller
 {
+    /**
+     * @param CreateReportSectionAPIRequest $request
+     * @return Response
+     *
+     * @SWG\Post(
+     *      path="/get_projet_report",
+     *      summary="Récupérer la liste des rapports de projet",
+     *      tags={"Report"},
+     *      description="Récupérer la liste des rapports de projet",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="projet_id",
+     *          description="Identifiant du projet",
+     *          type="string",
+     *          required=true,
+     *          in="formData",
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/ReportSection"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function getReports(Request $request)
+    {
+        if ($request->projet_id) {
+            $reports = Report::where('projet_id', $request->projet_id)->get();
+            return ResponseController::response(true, "Les rapports ont été récupérées avec succès", $reports);
+        } else {
+            return ResponseController::response(false, "Le champ projet_id est requis");
+        }
+    }
     /**
      * @param CreateReportSectionAPIRequest $request
      * @return Response
@@ -53,9 +101,7 @@ class ReportController extends Controller
             $sections = ReportSection::where('report_id', $request->report_id)->get();
             return ResponseController::response(true, "Les sections ont été récupérées avec succès", $sections);
         } else {
-            return ResponseController::response(false, "Passer");
+            return ResponseController::response(false, "Le champ report_id est requis");
         }
-
-
     }
 }
