# storage/docs/api-docs.json
@@ -3787,6 +3787,46 @@
                 }
             }
         },
+        "/get_projet_report": {
+            "post": {
+                "tags": [
+                    "Report"
+                ],
+                "summary": "R\u00e9cup\u00e9rer la liste des rapports de projet",
+                "description": "R\u00e9cup\u00e9rer la liste des rapports de projet",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "projet_id",
+                        "in": "formData",
+                        "description": "Identifiant du projet",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/ReportSection"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/get_report_section": {
             "post": {
                 "tags": [
@@ -5482,8 +5522,8 @@
                 "tags": [
                     "Building"
                 ],
-                "summary": "Get projects by client_id",
-                "description": "Get projects by client_id",
+                "summary": "R\u00e9cup\u00e9rer les niveaux d'un batiment en fonction de l'identifiant",
+                "description": "R\u00e9cup\u00e9rer les niveaux d'un batiment en fonction de l'identifiant",
                 "produces": [
                     "application/json"
                 ],
